整理zeanzai.github.io仓库中的devops部分，还没有整理完成。, 61ab3279e691ffbcbe851d2792ae7f8f70dadcfd