@@ -1,6 +1,4 @@
-# CentOS
-
-### 1. 常用命令
+## 常用命令
 
 ```bash
 //---------- 服务管理
@@ -24,6 +22,10 @@ firewall-cmd --reload
 // --------- 端口监听状况
 netstat -tunlp
 netstat -nultp |grep 8080
+ifconfig # 所有网络接口属性
+ethtool 网卡名 # 带宽
+route -n # 路由表
+netstat -antp # 所有已经建立的连接
 
 // --------- 磁盘管理
 fdisk -l
@@ -47,7 +49,9 @@ scp -r local_folder remote_username@remote_ip:remote_folder
 scp -r local_folder username@ip:remote_folder
 //或者
 scp -r local_folder remote_ip:remote_folder
-
+// --------- 实现 ssh 免密登陆
+ssh-copy-id -i ~/.ssh/id_rsa.pub root@192.168.1.150
+ssh root@192.168.1.150
 
 // 启动server
 
@@ -58,12 +62,13 @@ scp -r root@ip:/apps/local/nginx-1.8.0.tar.gz /Users/gary/Documents/
 docker logs -f -t --tail 100   529a4d9afd8e
 
 
-
+// ---------- 文件查找
 // 删除当前目录及子文件夹下面所有的target文件夹
 find ./ -name -type d "target" -exec rm -rf '{}' +
 
 // 删除当前目录及子文件夹内所有的以.iml结尾的文件
 find ./ -name '*.iml' -exec rm -rf '{}' +
+
 
 
 // 查看linux系统的最大的线程数
@@ -124,6 +129,38 @@ ll -lh log.log
 Linux home.centos 3.10.0-1160.76.1.el7.x86_64 #1 SMP Wed Aug 10 16:21:17 UTC 2022 x86_64 x86_64 x86_64 GNU/Linux
 
 
+// --------- 服务器基本信息
+uname -a
+hostname
+
+
+总核数 = 物理CPU个数 X 每颗物理CPU的核数
+总逻辑CPU数 = 物理CPU个数 X 每颗物理CPU的核数 X 超线程数
+
+# 全部信息
+cat /proc/cpuinfo
+
+# 物理CPU个数
+cat /proc/cpuinfo| grep "physical id"| sort| uniq| wc -l
+
+# 每个物理CPU中core的个数(即核数)
+cat /proc/cpuinfo| grep "cpu cores"| uniq
+
+# 逻辑CPU的个数
+cat /proc/cpuinfo| grep "processor"| wc -l
+
+getconf LONG_BIT # 计算机位数
+env # 环境变量
+
+cat /proc/meminfo # 内存
+free -m # 空闲内存
+1. 查看总内存情况使用命令`cat /proc/meminfo`即可。
+2. 查看内存占用状态使用`free -m`(-m，单位是m，如果是-g，单位是g）。
+
+# 定期清理日志： 1. 把命令日志备份到文件； 2. 清除 history
+
+history > /mnt/d/centos/centos.log
+history -c
 ```
 
 ::: tip 查询日志的做法
@@ -135,11 +172,11 @@ Linux home.centos 3.10.0-1160.76.1.el7.x86_64 #1 SMP Wed Aug 10 16:21:17 UTC 202
 
 :::
 
-### 2. 常用软件的安装
+## 常用软件的安装
 
-::: tabs
+<details class="details custom-block">
 
-@tab JDK
+<summary>JDK</summary>
 
 ```bash
 // 把下载好的jdk安装包上传至 centos
@@ -162,7 +199,11 @@ export PATH=$PATH:$JAVA_HOME/bin
 
 ```
 
-@tab Nacos
+</details>
+
+<details class="details custom-block">
+
+<summary>nacos-server-2.2.3</summary>
 
 ```bash
 // nacos运行环境依赖于jdk环境，因此需要先安装jdk。
@@ -236,6 +277,12 @@ firewall-cmd --reload
 
 ```
 
+</details>
+
+<details class="details custom-block">
+
+<summary>nacos-server-1.2.1</summary>
+
 ```bash
 
 // 下载
@@ -302,7 +349,11 @@ error_exit ()
 
 ```
 
-@tab Docker
+</details>
+
+<details class="details custom-block">
+
+<summary>Docker 和 Docker-compose</summary>
 
 ```bash
 // 扩展阅读： yum出问题后： https://www.cnblogs.com/lxzcloud/p/18349036
@@ -426,7 +477,7 @@ Server: Docker Engine - Community
 
 ```
 
-```
+```bash
 # 下载docker compose
 curl -SL https://github.com/docker/compose/releases/download/v2.17.2/docker-compose-linux-x86_64 -o /usr/local/bin/docker-compose
 # 添加可执行权限
@@ -439,7 +490,11 @@ docker-compose --version
 
 ```
 
-@tab FFMpeg
+</details>
+
+<details class="details custom-block">
+
+<summary>FFMpeg</summary>
 
 ```bash
 
@@ -470,7 +525,109 @@ source /etc/profile
 ffmpeg -version
 ```
 
-@tab redis5
+</details>
+
+<details class="details custom-block">
+
+<summary>Redis5</summary>
+
+- 安装 gcc 编译工具包
+
+```
+$ yum update -y
+$ yum install -y gcc
+```
+
+- 解压
+
+```
+$ tar zxf /opt/package/redis5.0.3.tar.gz -C /opt/unziped/
+```
+
+- 创建文件夹
+
+```
+$ mkdir /usr/setup/redis5.0.3
+$ mkdir /usr/setup/redis5.0.3/log
+$ mkdir /usr/setup/redis5.0.3/data
+```
+
+- 进入解压后的 redis 目录并执行 make 命令
+
+```
+$ make
+```
+
+- 执行安装命令
+
+```
+$ make install PREFIX=/usr/setup/redis5.0.3
+```
+
+- 拷贝配置文件
+
+```
+$ cp /opt/unziped/redis5.0.3/6379.conf /usr/setup/redis5.0.3
+```
+
+- 打开守护进程运行模式
+
+```
+// 修改配置文件，将daemonize的值改为yes
+$ vi /usr/setup/redis5.0.3/6379.conf
+port 6379
+bind 191.168.1.150
+daemonize yes
+requirepass 123456
+appendonly yes
+```
+
+- 加入开机自启
+
+```
+$ ./opt/unziped/redis5.0.3/utils/install_server.sh
+Welcome to the redis service installer
+This script will help you easily set up a running redis server
+Please select the redis port for this instance: [6379]
+Selecting default: 6379
+Please select the redis config file name [/etc/redis/6379.conf] /usr/setup/redis5.0.3/6379.conf
+Please select the redis log file name [/var/log/redis_6379.log] /usr/setup/redis5.0.3/log/redis.log
+Please select the data directory for this instance [/var/lib/redis/6379] /usr/setup/redis5.0.3/data/6379
+Please select the redis executable path [] /usr/setup/redis5.0.3/bin/redis-server
+Selected config:
+Port           : 6379
+Config file    : /usr/setup/redis5.0.3/6379.conf
+Log file       : /usr/setup/redis5.0.3/log/6379.log
+Data dir       : /usr/setup/redis5.0.3/data
+Executable     : /usr/setup/redis5.0.3/bin/redis-server
+Cli Executable : /usr/setup/redis5.0.3/bin/redis-cli
+Is this ok? Then press ENTER to go on or Ctrl-C to abort.
+Copied /tmp/6379.conf => /etc/init.d/redis_6379
+Installing service...
+Successfully added to chkconfig!
+Successfully added to runlevels 345!
+Starting Redis server...
+Installation successful!
+```
+
+- 开启端口，并重启防火墙
+
+```
+$ firewall-cmd --zone=public --permanent --add-port=6379/tcp
+$ firewall-cmd --reload
+```
+
+- 重启后测试
+
+```
+1. 本机连接测试
+$ cd /usr/setup/redis5.0.3/bin/
+$ ./redis-cli -h 192.168.1.150 -p 6379
+127.0.0.1:6379> info
+
+2. 开发机连接测试
+cmd: redis-cli.exe -h 10.168.0.120 -p 6379
+```
 
 ```bash
 [root@localhost redis5.0.7]# cd /home/redis-5.0.7/utils/
@@ -520,4 +677,422 @@ Installation successful!
 
 ```
 
-:::
+</details>
+
+<details class="details custom-block">
+
+<summary>安装并使用 nexus2.x</summary>
+
+### 安装
+
+- 安装依赖
+
+```
+$ java -version
+java version "1.8.0_144"
+Java(TM) SE Runtime Environment (build 1.8.0_144-b01)
+Java HotSpot(TM) 64-Bit Server VM (build 25.144-b01, mixed mode)
+```
+
+- 上传到`/opt/package`目录
+
+- 解压到解压目录
+
+```
+$ tar zxf /opt/package/nexus-2.14.5-02-bundle.tar.gz -C /usr/setup/
+```
+
+- 移动
+
+```
+$ mv -f /usr/setup/sonatype-work/ /opt/
+```
+
+- 配置 nexus
+
+```
+$ vi /usr/setup/nexus-2.14.5-02/conf/nexus.properties
+// 修改后：
+application-host=10.168.0.120
+nexus-work=/opt/sonatype-work/nexus
+
+$ vi /usr/setup/nexus-2.14.5-02/bin/nexus
+// 修改后：
+NEXUS_HOME="/usr/setup/nexus-2.14.5-02"
+RUN_AS_USER=root
+
+$ vi /usr/setup/nexus-2.14.5-02/bin/jsw/conf/wrapper.conf
+// 修改后：
+wrapper.java.command=/usr/setup/jdk1.8.0_144/bin/java
+```
+
+- 开放端口
+
+```
+$ firewall-cmd --zone=public --permanent --add-port=8081/tcp
+$ firewall-cmd --reload
+```
+
+- 设置服务
+
+```
+$ vi /etc/systemd/system/nexus.service
+[Unit]
+Description=nexus
+After=network.target
+[Service]
+Type=forking
+ExecStart=/usr/setup/nexus-2.14.5-02/bin/nexus start
+ExecReload=/usr/setup/nexus-2.14.5-02/bin/nexus restart
+ExecStop=/usr/setup/nexus-2.14.5-02/bin/nexus stop
+PrivateTmp=true
+[Install]
+WantedBy=multi-user.target
+
+$ systemctl enable nexus
+$ systemctl start nexus
+```
+
+- 测试
+
+```
+浏览器输入：http://10.168.0.120:8081/nexus
+```
+
+### 使用 nexus2.x
+
+#### 权限管理
+
+1. 用户
+2. 角色
+
+#### 仓库类型
+
+几种仓库类型的简单介绍
+
+#### 查看日志
+
+如何查看 nexus 的执行日志
+
+#### 下载中央仓库索引
+
+1. 设置仓库开关
+2. 创建任务
+
+#### 设置项目连接私服
+
+- 单个项目连接私服
+
+```
+// 只需要在项目的pom文件中添加下面内容即可
+
+<repositories>
+    <repository>
+        <id>Nexus</id>
+        <name>10.168.0.120-Nexus</name>
+        <url>http://10.168.0.120:8081/nexus/content/groups/public/</url>
+    </repository>
+</repositories>
+
+```
+
+- 全局连接私服
+
+```
+// 在maven的setting.xml文件中配置下面内容即可
+
+<mirrors>
+    <mirror>
+        <id>devnexus</id>
+        <name>devnexus</name>
+        <mirrorOf>*</mirrorOf>
+        <url>http://10.168.0.120:8081/nexus/content/groups/public/</url>
+    </mirror>
+</mirrors>
+```
+
+#### 本地开发的 jar 发布到 nexus 上面
+
+- 第一步：配置 setting.xml 文件
+
+```
+<settings xmlns="http://maven.apache.org/SETTINGS/1.0.0"
+          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+          xsi:schemaLocation="http://maven.apache.org/SETTINGS/1.0.0 http://maven.apache.org/xsd/settings-1.0.0.xsd">
+
+
+    <localRepository>D:\maven\my_local_repository</localRepository>
+
+    <pluginGroups>
+    </pluginGroups>
+
+    <proxies>
+    </proxies>
+
+
+    <!--设置 Nexus 认证信息-->
+    <servers>
+        <server>
+            <id>nexus-releases</id>
+            <username>admin</username>
+            <password>admin123</password>
+        </server>
+        <server>
+            <id>nexus-snapshots</id>
+            <username>admin</username>
+            <password>admin123</password>
+        </server>
+    </servers>
+
+
+    <!--设置 Nexus 镜像，后面只要本地没对应的以来，则到 Nexus 去找-->
+    <mirrors>
+        <mirror>
+            <id>nexus-releases</id>
+            <mirrorOf>*</mirrorOf>
+            <url>http://10.168.0.120:8081/repository/maven-releases/</url>
+        </mirror>
+        <mirror>
+            <id>nexus-snapshots</id>
+            <mirrorOf>*</mirrorOf>
+            <url>http://10.168.0.120:8081/repository/maven-snapshots/</url>
+        </mirror>
+        <mirror>
+            <id>maven-aliyun</id>
+            <name>aliyun maven</name>
+            <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
+            <mirrorOf>central</mirrorOf>
+        </mirror>
+    </mirrors>
+
+    <profiles>
+        <profile>
+            <id>nexus</id>
+            <repositories>
+                <repository>
+                    <id>nexus-releases</id>
+                    <url>http://nexus-releases</url>
+                    <releases>
+                        <enabled>true</enabled>
+                    </releases>
+                    <snapshots>
+                        <enabled>true</enabled>
+                    </snapshots>
+                </repository>
+                <repository>
+                    <id>nexus-snapshots</id>
+                    <url>http://nexus-snapshots</url>
+                    <releases>
+                        <enabled>true</enabled>
+                    </releases>
+                    <snapshots>
+                        <enabled>true</enabled>
+                    </snapshots>
+                </repository>
+            </repositories>
+            <pluginRepositories>
+                <pluginRepository>
+                    <id>nexus-releases</id>
+                    <url>http://nexus-releases</url>
+                    <releases>
+                        <enabled>true</enabled>
+                    </releases>
+                    <snapshots>
+                        <enabled>true</enabled>
+                    </snapshots>
+                </pluginRepository>
+                <pluginRepository>
+                    <id>nexus-snapshots</id>
+                    <url>http://nexus-snapshots</url>
+                    <releases>
+                        <enabled>true</enabled>
+                    </releases>
+                    <snapshots>
+                        <enabled>true</enabled>
+                    </snapshots>
+                </pluginRepository>
+            </pluginRepositories>
+        </profile>
+    </profiles>
+
+    <activeProfiles>
+        <activeProfile>nexus</activeProfile>
+    </activeProfiles>
+
+</settings>
+```
+
+- 第二步：在 pom 文件中添加：
+
+```
+<distributionManagement>
+    <repository>
+        <id>nexus-releases</id>
+        <url>http://10.168.0.120:8081/repository/maven-releases/</url>
+    </repository>
+    <snapshotRepository>
+        <id>nexus-snapshots</id>
+        <url>http://10.168.0.120:8081/repository/maven-snapshots/</url>
+    </snapshotRepository>
+</distributionManagement>
+```
+
+#### 附：java 项目不同模块的划分
+
+划分的背景
+划分方法
+参考地址
+
+</details>
+
+## 服务管理
+
+https://blog.csdn.net/Mr_Yang__/article/details/84133783
+
+- http://blog.csdn.net/tiantang_1986/article/details/53704966
+- http://blog.csdn.net/fresh123456/article/details/50925038
+- http://blog.csdn.net/chenxiabinffff/article/details/51374635
+
+## 1. Nginx 服务自启动
+
+### 1. 编写服务文件
+
+vi /usr/lib/systemd/system/nginx.service
+注意修改安装路径
+
+```
+[Unit]
+Description=nginx - high performance web server
+After=network.target remote-fs.target nss-lookup.target
+
+[Service]
+Type=forking
+ExecStart=/softwares/nginx-1.12.2/sbin/nginx -c /softwares/nginx-1.12.2/conf/nginx.conf
+ExecReload=/softwares/nginx-1.12.2/sbin/nginx -s reload
+ExecStop=/softwares/nginx-1.12.2/sbin/nginx -s stop
+
+[Install]
+WantedBy=multi-user.target
+```
+
+### 2. 赋予 754 权限
+
+```shell
+[root@200 system]# chmod 754 /usr/lib/systemd/system/nginx.service
+```
+
+### 3. 设置开机自启动
+
+```shell
+[root@200 system]# systemctl enable nginx.service
+Created symlink from /etc/systemd/system/multi-user.target.wants/nginx.service to /usr/lib/systemd/system/nginx.service.
+[root@200 system]# systemctl enable nginx.service
+```
+
+### 4. 其他命令
+
+```shell
+systemctl [start | enable | disable | status | restart | stop] nginx.service
+```
+
+## 2. 其他软件开机自启动
+
+### 1. 编写服务文件
+
+#### 1. php-fpm
+
+vi /usr/lib/systemd/system/php-fpm.service
+
+```shell
+[Unit]
+Description=php
+After=network.target remote-fs.target nss-lookup.target
+
+[Service]
+Type=forking
+ExecStart=/usr/sbin/php-fpm
+
+[Install]
+WantedBy=multi-user.target
+```
+
+#### 2. redis
+
+vi /usr/lib/systemd/system/redis.service
+
+```shell
+[Unit]
+Description=Redis
+After=network.target remote-fs.target nss-lookup.target
+
+[Service]
+Type=forking
+ExecStart=/softwares/redis-4.0.6/bin/redis-server /softwares/redis-4.0.6/bin/redis.conf
+ExecStop=kill -INT 'cat /var/run/redis_6379.pid'
+[Install]
+WantedBy=multi-user.target
+```
+
+#### 3. tomcat7
+
+##### 1. tomcat7/bin 下面新建 setenv.sh 配置
+
+```
+#add tomcat pid
+CATALINA_PID="$CATALINA_BASE/tomcat.pid"
+#add java opts
+JAVA_OPTS="-server-XX:PermSize=256M -XX:MaxPermSize=1024m -Xms512M -Xmx1024M-XX:MaxNewSize=256m"
+```
+
+##### 2. 修改 bin/setclasspath.sh
+
+export JAVA_HOME=/softwares/jdk1.8.0_111
+
+export JRE_HOME=/softwares/jdk1.8.0_111/jre
+
+##### 3. 新建 service 文件
+
+vi /usr/lib/systemd/system/tomcat7.service
+
+```shell
+[Unit]
+Description=Tomcat
+After=syslog.targetnetwork.target remote-fs.target nss-lookup.target
+
+[Service]
+Type=forking
+PIDFile=/softwares/apache-tomcat-7.0.70/bin/tomcat.pid
+ExecStart=/softwares/apache-tomcat-7.0.70/bin/startup.sh
+ExecStop=kill -INT 'cat /softwares/apache-tomcat-7.0.70/bin/tomcat.pid'
+PrivateTmp=true
+
+[Install]
+WantedBy=multi-user.target
+```
+
+#### 4. apollo1.8.0
+
+```shell
+[Unit]
+Description=apollo1.8.0
+After=syslog.targetnetwork.target remote-fs.target nss-lookup.target
+
+[Service]
+Type=forking
+ExecStart=/usr/setup/apollo1.8.0/start.sh
+ExecStop=/usr/setup/apollo1.8.0/shutdown.sh
+PrivateTmp=true
+
+[Install]
+WantedBy=multi-user.target
+```
+
+### 2. 赋予权限
+
+### 3. 开启自动重启
+
+systemctl enable XXX.service
+
+### 4. 测试
+
+测试时需要保证软件已经处于关闭状态。
